--- a/app/src/main/res/layout/item_technology.xml
+++ b/app/src/main/res/layout/item_technology.xml
@@ -7,7 +7,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
+        android:layout_marginTop="11dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="5dp"
         android:background="#fff">
 
         <ImageView
