--- a/app/src/main/res/layout/activity_webview_container.xml
+++ b/app/src/main/res/layout/activity_webview_container.xml
@@ -7,9 +7,19 @@
 
     <include layout="@layout/toolbar_webview_container"/>
 
-    <!--webview动态生成-->
+
+    <ProgressBar
+        android:id="@+id/webView_container_progressBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:visibility="gone"
+        android:progressDrawable="@drawable/progressbar"/>
+
+    <!--webView动态生成-->
     <!--<WebView-->
         <!--android:id="@+id/webView_container_webview"-->
         <!--android:layout_width="match_parent"-->
         <!--android:layout_height="match_parent"/>-->
+
 </LinearLayout>
