--- a/app/src/main/res/layout/toolbar_webview_container.xml
+++ b/app/src/main/res/layout/toolbar_webview_container.xml
@@ -18,7 +18,10 @@
         android:id="@+id/toolbar_webview_container_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"/>
+        android:layout_centerInParent="true"
+        android:maxLines="1"
+        android:maxEms="15"
+        android:ellipsize="end"/>
 
     <ImageView
         android:id="@+id/toolbar_webview_container_collection"
